compiler/testData/diagnostics/tests/incompleteCode/emptyArguments.diag.txt
/emptyArguments.kt:20:17: error: no value passed for parameter 'z'
    asFunc(, 2, 3)
                ^^
/emptyArguments.kt:22:17: error: no value passed for parameter 'z'
    asFunc(1, , 3,)
                ^^^
/emptyArguments.kt:25:16: error: no value passed for parameter 'y'
    asFunc(, , 3)
               ^^
/emptyArguments.kt:25:16: error: no value passed for parameter 'z'
    asFunc(, , 3)
               ^^
/emptyArguments.kt:26:14: error: no value passed for parameter 'y'
    asFunc(, 2)
             ^^
/emptyArguments.kt:26:14: error: no value passed for parameter 'z'
    asFunc(, 2)
             ^^
/emptyArguments.kt:41:19: error: type mismatch: inferred type is B but A was expected
    asTypedFunc(, b, c,)
                  ^
/emptyArguments.kt:41:22: error: type mismatch: inferred type is C but B was expected
    asTypedFunc(, b, c,)
                     ^
/emptyArguments.kt:41:22: error: no value passed for parameter 'c'
    asTypedFunc(, b, c,)
                     ^^^
/emptyArguments.kt:42:19: error: type mismatch: inferred type is B but A was expected
    asTypedFunc(, b, c)
                  ^
/emptyArguments.kt:42:22: error: type mismatch: inferred type is C but B was expected
    asTypedFunc(, b, c)
                     ^
/emptyArguments.kt:42:22: error: no value passed for parameter 'c'
    asTypedFunc(, b, c)
                     ^^
/emptyArguments.kt:43:22: error: type mismatch: inferred type is C but B was expected
    asTypedFunc(a, , c,)
                     ^
/emptyArguments.kt:43:22: error: no value passed for parameter 'c'
    asTypedFunc(a, , c,)
                     ^^^
/emptyArguments.kt:47:19: error: type mismatch: inferred type is B but A was expected
    asTypedFunc(, b,)
                  ^
/emptyArguments.kt:47:19: error: no value passed for parameter 'b'
    asTypedFunc(, b,)
                  ^^^
/emptyArguments.kt:47:19: error: no value passed for parameter 'c'
    asTypedFunc(, b,)
                  ^^^
/emptyArguments.kt:49:21: error: type mismatch: inferred type is C but A was expected
    asTypedFunc(, , c)
                    ^
/emptyArguments.kt:49:21: error: no value passed for parameter 'b'
    asTypedFunc(, , c)
                    ^^
/emptyArguments.kt:49:21: error: no value passed for parameter 'c'
    asTypedFunc(, , c)
                    ^^
/emptyArguments.kt:53:28: error: type mismatch: inferred type is C but B was expected
    asTypedFunc(a = A(), , c)
                           ^
/emptyArguments.kt:53:28: error: no value passed for parameter 'c'
    asTypedFunc(a = A(), , c)
                           ^^
/emptyArguments.kt:54:28: error: no value passed for parameter 'a'
    asTypedFunc(c = C(), , b = B())
                           ^^^^^^^^
/emptyArguments.kt:55:28: error: no value passed for parameter 'c'
    asTypedFunc(, a = A(), b,)
                           ^^^
/emptyArguments.kt:57:28: error: mixing named and positioned arguments is not allowed
    asTypedFunc(, b = B(), a, c)
                           ^
/emptyArguments.kt:57:31: error: mixing named and positioned arguments is not allowed
    asTypedFunc(, b = B(), a, c)
                              ^
/emptyArguments.kt:57:31: error: no value passed for parameter 'a'
    asTypedFunc(, b = B(), a, c)
                              ^^
/emptyArguments.kt:57:31: error: no value passed for parameter 'c'
    asTypedFunc(, b = B(), a, c)
                              ^^
/emptyArguments.kt:58:28: error: type mismatch: inferred type is C but B was expected
    asTypedFunc(a = A(), , c)
                           ^
/emptyArguments.kt:58:28: error: no value passed for parameter 'c'
    asTypedFunc(a = A(), , c)
                           ^^
/emptyArguments.kt:59:28: error: no value passed for parameter 'b'
    asTypedFunc(a = A(), , c = C(),)
                           ^^^^^^^^^
/emptyArguments.kt:60:28: error: type mismatch: inferred type is C but B was expected
    asTypedFunc(a = A(), , c,)
                           ^
/emptyArguments.kt:60:28: error: no value passed for parameter 'c'
    asTypedFunc(a = A(), , c,)
                           ^^^
/emptyArguments.kt:64:21: error: no value passed for parameter 'b'
    asTypedFunc(, , a = A())
                    ^^^^^^^^
/emptyArguments.kt:64:21: error: no value passed for parameter 'c'
    asTypedFunc(, , a = A())
                    ^^^^^^^^
/emptyArguments.kt:65:21: error: no value passed for parameter 'a'
    asTypedFunc(, , c = C())
                    ^^^^^^^^
/emptyArguments.kt:65:21: error: no value passed for parameter 'b'
    asTypedFunc(, , c = C())
                    ^^^^^^^^

